--- a/Research2-UserPersonalizationModel/Readme
+++ b/Research2-UserPersonalizationModel/Readme
@@ -1,1 +1,22 @@
+# User Personalization Model
 
+This repository contains a user personalization model developed to analyze and cluster user preferences using machine learning techniques. Below is an overview of the components in this repository:
+
+## Files and Directories
+
+### Models
+- **Clustering_Model**
+  - Original clustering model used to group users based on their preferences.
+  - **File:** `Clustering_Model.ipynb`
+
+- **Clustering_Evaluation**
+  - Evaluation model to assess the performance and metrics of the clustering model.
+  - **File:** `Clustering_Evaluation.ipynb`
+
+- **Clustering_Database_Integration**
+  - Model to integrate clustering outputs with a database for further personalization or data management.
+  - **File:** `Clustering_Database_Integration.ipynb`
+
+### Dataset
+- **Color_Preferences_Survey_Data_v4.csv**
+  - Dataset used for training and testing the clustering model. This dataset contains user preferences and has been renamed for clarity.
